Added registration to project

--- a/SitecoreLibrary/Views/BookWithAuthor/GetAllBookAuthorDetails.cshtml
+++ b/SitecoreLibrary/Views/BookWithAuthor/GetAllBookAuthorDetails.cshtml
@@ -2,6 +2,7 @@
 
 <p>
     @Html.ActionLink("Add New Book", "AddBookWithAuthor")
+    @Html.ActionLink("Register", "RedirectRegistration")
 </p>
 
 <table class="table">
