--- a/SitecoreLibrary/Views/BookWithAuthor/GetAllBookAuthorDetails.cshtml
+++ b/SitecoreLibrary/Views/BookWithAuthor/GetAllBookAuthorDetails.cshtml
@@ -13,8 +13,7 @@
         <th>
             @Html.DisplayNameFor(model => model.BookName)
         </th>
-
-        <th></th>
+        
     </tr>
 
     @foreach (var item in Model)
@@ -32,7 +31,16 @@
 
             <td>
                 @Html.ActionLink("Edit", "EditBookWithAuthorDetails", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "DeleteBookWithAuthor", new { id = item.Id }, new { onclick = "return confirm('Are sure wants to delete?');" })
+                @Html.ActionLink("Delete", "DeleteBookWithAuthor", new { id = item.Id }, new { onclick = "return confirm('Are you sure about delete?');" })
+            </td>
+
+            <td>
+                @{
+                    if (Request.IsAuthenticated && !item.IsTaken)
+                    {
+                        @Html.ActionLink("Take book", "TakeBookWithUser", new { bookId = item.Id}, new { onclick = "return confirm('Do you really want to take this book?');"})
+                    }
+                }
             </td>
         </tr>
 
