Books are returned now

--- a/SitecoreLibrary/Views/BookWithAuthor/GetAllBookAuthorDetails.cshtml
+++ b/SitecoreLibrary/Views/BookWithAuthor/GetAllBookAuthorDetails.cshtml
@@ -24,26 +24,28 @@
             <td>
                 @Html.DisplayFor(model => item.FullName)
             </td>
-            
+
             <td>
                 @Html.DisplayFor(model => item.BookName)
             </td>
 
             <td>
-                @Html.ActionLink("Edit", "EditBookWithAuthorDetails", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "DeleteBookWithAuthor", new { id = item.Id }, new { onclick = "return confirm('Are you sure about delete?');" })
+                @Html.ActionLink("Edit", "EditBookWithAuthorDetails", new {id = item.Id}) |
+                @Html.ActionLink("Delete", "DeleteBookWithAuthor", new {id = item.Id}, new {onclick = "return confirm('Are you sure about delete?');"})
             </td>
 
             <td>
                 @{
                     if (Request.IsAuthenticated && !item.IsTaken)
                     {
-                        @Html.ActionLink("Take book", "TakeBookWithUser", new { bookId = item.Id, userId = (Guid)(Membership.GetUser().ProviderUserKey) }, new { onclick = "return confirm('Do you really want to take this book?');"})
+                        @Html.ActionLink("Take book", "TakeBookWithUser", new { bookId = item.Id, userId = (Guid) (Membership.GetUser().ProviderUserKey)}, new {onclick = "return confirm('Do you really want to take this book?');"})
+                    }
+                    else if (Request.IsAuthenticated && item.TakenByUserId == (Guid) (Membership.GetUser().ProviderUserKey))
+                    {
+                        @Html.ActionLink("Return book", "ReturnBookWithUser", new { bookId = item.Id }, new {onclick = "return confirm('Do you really want to take this book?');"})
                     }
                 }
             </td>
         </tr>
-
     }
-
 </table>
