--- a/SitecoreLibrary/Views/Shared/_LoginPartial.cshtml
+++ b/SitecoreLibrary/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
         <ul class="nav navbar-nav navbar-right">
             <li>
             </li>
-            <li><a href="javascript:document.getElementById('logoutForm').submit()">Hello, @User.Identity.Name!</a></li>
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">Hi, @User.Identity.Name! Logout</a></li>
         </ul>
     }
 }
