--- a/SitecoreLibrary/Views/Shared/_BooksWithAuthorsTable.cshtml
+++ b/SitecoreLibrary/Views/Shared/_BooksWithAuthorsTable.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<SitecoreLibrary.Models.BooksWithAuthor>
 
-<table id="SearchResults">
+
+<table id="SearchResults" class="table table.bordered table-hover">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.FullName)
