--- a/SitecoreLibrary/Views/BookWithAuthor/GetAllBookAuthorDetails.cshtml
+++ b/SitecoreLibrary/Views/BookWithAuthor/GetAllBookAuthorDetails.cshtml
@@ -1,5 +1,7 @@
 ﻿@using System.Web.Mvc.Html
-@model IEnumerable<SitecoreLibrary.Models.BooksWithAuthor>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
+@model PagedList.IPagedList<SitecoreLibrary.Models.BooksWithAuthor>
 
 <h2>LIST OF BOOKS</h2>
 
@@ -25,7 +27,11 @@
 
 @Html.Partial("_BooksWithAuthorsTable")
 
+<br />
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
+@Html.PagedListPager(Model, page => Url.Action("GetAllBookAuthorDetails",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
