--- a/SitecoreLibrary/Views/Shared/_BooksWithAuthorsTable.cshtml
+++ b/SitecoreLibrary/Views/Shared/_BooksWithAuthorsTable.cshtml
@@ -25,7 +25,7 @@
             </td>
 
             <td>
-                @Html.DisplayFor(model => item.BookName)
+                @Html.ActionLink(item.BookName, "Index", "BookHistory")
             </td>
 
             <td>
