Now history goes only for id = 1

--- a/SitecoreLibrary/Views/Shared/_BooksWithAuthorsTable.cshtml
+++ b/SitecoreLibrary/Views/Shared/_BooksWithAuthorsTable.cshtml
@@ -25,7 +25,7 @@
             </td>
 
             <td>
-                @Html.ActionLink(item.BookName, "Index", "BookHistory")
+                @Html.ActionLink(item.BookName, "BookHistory", new {bookId = 1})
             </td>
 
             <td>
