History works fine now

--- a/SitecoreLibrary/Views/Shared/_BooksWithAuthorsTable.cshtml
+++ b/SitecoreLibrary/Views/Shared/_BooksWithAuthorsTable.cshtml
@@ -25,7 +25,7 @@
             </td>
 
             <td>
-                @Html.ActionLink(item.BookName, "BookHistory", new {bookId = 1})
+                @Html.ActionLink(item.BookName, "BookHistory", new {bookId = item.Id})
             </td>
 
             <td>
