--- a/SitecoreLibrary/Views/BookWithAuthor/AddBook.cshtml
+++ b/SitecoreLibrary/Views/BookWithAuthor/AddBook.cshtml
@@ -9,7 +9,7 @@
     <div class="form-horizontal">
         <h4>Add Book</h4>
         <div>
-            @Html.ActionLink("Back to Books List", "GetAllBookAuthorDetails")
+            @Html.ActionLink("Back to Books List", "GetAllBooks")
         </div>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
