--- a/SitecoreLibrary/Views/BookWithAuthor/EditBook.cshtml
+++ b/SitecoreLibrary/Views/BookWithAuthor/EditBook.cshtml
@@ -9,7 +9,7 @@
         <h4>Update Book Details</h4>
         <hr />
         <div>
-            @Html.ActionLink("Back to Details", "GetAllBookAuthorDetails")
+            @Html.ActionLink("Back to Details", "GetAllBooks")
         </div>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
