--- a/SitecoreLibrary/Views/Shared/_Layout.cshtml
+++ b/SitecoreLibrary/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Sitecore Library", "GetAllBookAuthorDetails", "BookWithAuthor", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Sitecore Library", "GetAllBooks", "BookWithAuthor", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
