--- a/SitecoreLibrary/Views/Shared/_BooksWithAuthorsTable.cshtml
+++ b/SitecoreLibrary/Views/Shared/_BooksWithAuthorsTable.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedList.IPagedList<SitecoreLibrary.Models.BooksWithAuthor>
+﻿@model PagedList.IPagedList<SitecoreLibrary.Models.Books>
 
 <table id="SearchResults" class="table table.bordered table-hover">
     <tr>
