--- a/SitecoreLibrary/Views/Book/AddBook.cshtml
+++ b/SitecoreLibrary/Views/Book/AddBook.cshtml
@@ -1,27 +1,18 @@
-﻿@model SitecoreLibrary.Models.BooksWithAuthor
+﻿@model SitecoreLibrary.Models.Books
 
 
 @using (Html.BeginForm())
 {
+
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Update Book Details</h4>
-        <hr />
+        <h4>Add Book</h4>
         <div>
-            @Html.ActionLink("Back to Details", "GetAllBooks")
+            @Html.ActionLink("Back to Books List", "GetAllBooks")
         </div>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.BookName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BookName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BookName, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -38,10 +29,24 @@
                 @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
             </div>
         </div>
-       
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.BookName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.BookName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.BookName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Update" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10" style="color:green">
+                @ViewBag.Message
+
             </div>
         </div>
     </div>
@@ -51,9 +56,3 @@
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-
