--- a/SitecoreLibrary/Views/Book/EditBook.cshtml
+++ b/SitecoreLibrary/Views/Book/EditBook.cshtml
@@ -1,18 +1,27 @@
-﻿@model SitecoreLibrary.Models.BooksWithAuthor
+﻿@model SitecoreLibrary.Models.Books
 
 
 @using (Html.BeginForm())
 {
-
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Add Book</h4>
+        <h4>Update Book Details</h4>
+        <hr />
         <div>
-            @Html.ActionLink("Back to Books List", "GetAllBooks")
+            @Html.ActionLink("Back to Details", "GetAllBooks")
         </div>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.BookName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.BookName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.BookName, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -29,24 +38,10 @@
                 @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.BookName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BookName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BookName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
+       
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10" style="color:green">
-                @ViewBag.Message
-
+                <input type="submit" value="Update" class="btn btn-default" />
             </div>
         </div>
     </div>
@@ -56,3 +51,9 @@
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+
+
