--- a/SitecoreLibrary/Views/BookHistory/Index.cshtml
+++ b/SitecoreLibrary/Views/BookHistory/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SitecoreLibrary.Models.BookHistory>
+﻿@model IEnumerable<SitecoreLibrary.ViewModels.BookHistory>
 
 <h2>Books History</h2>
 
