--- a/SitecoreLibrary/Views/Book/GetAllBooks.cshtml
+++ b/SitecoreLibrary/Views/Book/GetAllBooks.cshtml
@@ -25,7 +25,7 @@
     </div>
 }
 
-@Html.Partial("_BooksWithAuthorsTable")
+@Html.Partial("_BooksTable")
 
 <br />
 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
