Small controller changes

--- a/SitecoreLibrary/Views/Book/EditBook.cshtml
+++ b/SitecoreLibrary/Views/Book/EditBook.cshtml
@@ -61,7 +61,7 @@
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "GetAllBooks")
 </div>
 
 
